2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Art_Storage_Facility_floorplan__c.field-meta.xml
<CustomField>
    <fullName>Comment_Art_Storage_Facility_floorplan__c</fullName>
    <description>Supervisor Comment Art Storage Facility floorplan.</description>
    <inlineHelpText>Supervisor Comment Art Storage Facility floorplan.</inlineHelpText>
    <label>Comment Art Storage Facility floorplan</label>
    <type>TextArea</type>
</CustomField>