2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Art_Storage_Facility_GM__c.field-meta.xml
<CustomField>
    <fullName>Comment_Art_Storage_Facility_GM__c</fullName>
    <description>Supervisor Comment Art Storage Facility [GM].</description>
    <inlineHelpText>Supervisor Comment Art Storage Facility [GM].</inlineHelpText>
    <label>Comment Art Storage Facility [GM]</label>
    <type>TextArea</type>
</CustomField>