2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Artmove_Operations__c.field-meta.xml
<CustomField>
    <fullName>Comment_Artmove_Operations__c</fullName>
    <description>Supervisor Comment Artmove Operations.</description>
    <inlineHelpText>Supervisor Comment Artmove Operations.</inlineHelpText>
    <label>Comment Artmove Operations</label>
    <type>TextArea</type>
</CustomField>