2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Artmove_Operations_GM__c.field-meta.xml
<CustomField>
    <fullName>Comment_Artmove_Operations_GM__c</fullName>
    <description>Supervisor Comment Artmove Operations [GM]</description>
    <inlineHelpText>Supervisor Comment Artmove Operations [GM].</inlineHelpText>
    <label>Comment Artmove Operations [GM]</label>
    <type>TextArea</type>
</CustomField>