2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Artmove_Operations_SHP__c.field-meta.xml
<CustomField>
    <fullName>Comment_Artmove_Operations_SHP__c</fullName>
    <description>Supervisor Comment Artmove Operations [SHP]</description>
    <inlineHelpText>Supervisor Comment Ar.tmove Operations [SHP]</inlineHelpText>
    <label>Comment Artmove Operations [SHP]</label>
    <type>TextArea</type>
</CustomField>