2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Artwork_Safety__c.field-meta.xml
<CustomField>
    <fullName>Comment_Artwork_Safety__c</fullName>
    <description>Comment for Artwork safety</description>
    <inlineHelpText>Comment for Artwork safety</inlineHelpText>
    <label>Comment Artwork Safety</label>
    <type>TextArea</type>
</CustomField>