2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Asian_Works_Material_Identi__c.field-meta.xml
<CustomField>
    <fullName>Comment_Asian_Works_Material_Identi__c</fullName>
    <description>Comments for Asian works on Paper, Material Identification.</description>
    <inlineHelpText>Comments for Asian works on Paper, Material Identification.</inlineHelpText>
    <label>Comment Asian Works [Material Identi.]</label>
    <type>TextArea</type>
</CustomField>