2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Asian_workson_Paper_VisualCheck__c.field-meta.xml
<CustomField>
    <fullName>Comment_Asian_workson_Paper_VisualCheck__c</fullName>
    <description>Comment Asian works on Paper[Visual Check]</description>
    <inlineHelpText>Comment Asian works on Paper[Visual Check]</inlineHelpText>
    <label>Comment Asian workson Paper[VisualCheck]</label>
    <type>TextArea</type>
</CustomField>