2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Business_Acumen__c.field-meta.xml
<CustomField>
    <fullName>Comment_Business_Acumen__c</fullName>
    <description>Supervisor Comment Business Acumen</description>
    <inlineHelpText>Supervisor Comment Business Acumen.</inlineHelpText>
    <label>Comment Business Acumen</label>
    <type>TextArea</type>
</CustomField>