2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Business_Acumen_GM__c.field-meta.xml
<CustomField>
    <fullName>Comment_Business_Acumen_GM__c</fullName>
    <description>Supervisor Comment Business Acumen [GM].</description>
    <inlineHelpText>Supervisor Comment Business Acumen [GM].</inlineHelpText>
    <label>Comment Business Acumen [GM]</label>
    <type>TextArea</type>
</CustomField>