2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Business_Mgmt_Brand_Product__c.field-meta.xml
<CustomField>
    <fullName>Comment_Business_Mgmt_Brand_Product__c</fullName>
    <description>Supervisor Comment Business Mgmt/Brand(Product) awareness.</description>
    <inlineHelpText>Supervisor Comment Business Mgmt/Brand(Product) awareness.</inlineHelpText>
    <label>Comment Business Mgmt/Brand(Product)</label>
    <type>TextArea</type>
</CustomField>