2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Ceramics_Glass_Material_Identi__c.field-meta.xml
<CustomField>
    <fullName>Comment_Ceramics_Glass_Material_Identi__c</fullName>
    <description>Comments for Ceramics &amp; Glass, Material Identification</description>
    <inlineHelpText>Comments for Ceramics &amp; Glass, Material Identification</inlineHelpText>
    <label>Comment Ceramics&amp;Glass[Material Identi.]</label>
    <type>TextArea</type>
</CustomField>