2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Client_Management_GM__c.field-meta.xml
<CustomField>
    <fullName>Comment_Client_Management_GM__c</fullName>
    <description>Supervisor Comment Client Management [GM].</description>
    <inlineHelpText>Supervisor Comment Client Management [GM].</inlineHelpText>
    <label>Comment Client Management [GM]</label>
    <type>TextArea</type>
</CustomField>