2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Client_Servicing_CS__c.field-meta.xml
<CustomField>
    <fullName>Comment_Client_Servicing_CS__c</fullName>
    <description>Supervisor Comment Client Servicing [CS]</description>
    <inlineHelpText>Supervisor Comment Client Servicing [CS].</inlineHelpText>
    <label>Comment Client Servicing [CS]</label>
    <type>TextArea</type>
</CustomField>