2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Communication_Skills_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Comment_Communication_Skills_Shipping__c</fullName>
    <description>Supervisor Comment Communication Skills [Shipping]</description>
    <inlineHelpText>Supervisor Comment Communication Skills [Shipping].</inlineHelpText>
    <label>Comment Communication Skills [Shipping]</label>
    <type>TextArea</type>
</CustomField>