2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Confidentiality__c.field-meta.xml
<CustomField>
    <fullName>Comment_Confidentiality__c</fullName>
    <description>Supervisor Comment for Confidentiality.</description>
    <inlineHelpText>Supervisor Comment for Confidentiality.</inlineHelpText>
    <label>Comment Confidentiality</label>
    <type>TextArea</type>
</CustomField>