2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Conflict_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Conflict_Management__c</fullName>
    <description>Supervisor Comment for Conflict Management.</description>
    <inlineHelpText>Supervisor Comment for Conflict Management.</inlineHelpText>
    <label>Comment Conflict Management</label>
    <type>TextArea</type>
</CustomField>