2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Container_Loading__c.field-meta.xml
<CustomField>
    <fullName>Comment_Container_Loading__c</fullName>
    <description>Supervisor Comment Container Loading</description>
    <inlineHelpText>Supervisor Comment Container Loading.</inlineHelpText>
    <label>Comment Container Loading</label>
    <type>TextArea</type>
</CustomField>