2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_ContemporaryObj_Material_Ident__c.field-meta.xml
<CustomField>
    <fullName>Comment_ContemporaryObj_Material_Ident__c</fullName>
    <description>Supervisor Comment for Material Identification of Contemporary Objects / Plastics &amp; Electronic materials (inclusive of Neon works).</description>
    <inlineHelpText>Supervisor Comment for Material Identification of Contemporary Objects / Plastics &amp; Electronic materials (inclusive of Neon works).</inlineHelpText>
    <label>Comment ContemporaryObj [Material Ident]</label>
    <type>TextArea</type>
</CustomField>