2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Cost_Effectiveness__c.field-meta.xml
<CustomField>
    <fullName>Comment_Cost_Effectiveness__c</fullName>
    <description>Supervisor Comment Cost Effectiveness</description>
    <inlineHelpText>Supervisor Comment Cost Effectiveness.</inlineHelpText>
    <label>Comment Cost Effectiveness</label>
    <type>TextArea</type>
</CustomField>