2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Crate_Cartons_knowledge__c.field-meta.xml
<CustomField>
    <fullName>Comment_Crate_Cartons_knowledge__c</fullName>
    <description>Supervisor Comment Crate &amp; Cartons knowledge</description>
    <inlineHelpText>Supervisor Comment Crate &amp; Cartons knowledge.</inlineHelpText>
    <label>Comment Crate &amp; Cartons knowledge</label>
    <type>TextArea</type>
</CustomField>