2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Crating_Carton_Methods_GM__c.field-meta.xml
<CustomField>
    <fullName>Comment_Crating_Carton_Methods_GM__c</fullName>
    <description>Supervisor Comment Crating &amp; Carton Methods [GM].</description>
    <inlineHelpText>Supervisor Comment Crating &amp; Carton Methods [GM].</inlineHelpText>
    <label>Comment Crating &amp; Carton Methods [GM]</label>
    <type>TextArea</type>
</CustomField>