2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Crating_Methods__c.field-meta.xml
<CustomField>
    <fullName>Comment_Crating_Methods__c</fullName>
    <description>Supervisor comment for Crating Methods.</description>
    <inlineHelpText>Supervisor comment for Crating Methods.</inlineHelpText>
    <label>Comment Crating Methods</label>
    <type>TextArea</type>
</CustomField>