2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Custom_App_Freight_Formal_GM__c.field-meta.xml
<CustomField>
    <fullName>Comment_Custom_App_Freight_Formal_GM__c</fullName>
    <description>Comment Custom Application &amp; Freight Formalities [GM].</description>
    <inlineHelpText>Comment Custom Application &amp; Freight Formalities [GM].</inlineHelpText>
    <label>Comment Custom App &amp; Freight Formal[GM]</label>
    <type>TextArea</type>
</CustomField>