2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Custom_Formalities_Regulat_GM__c.field-meta.xml
<CustomField>
    <fullName>Comment_Custom_Formalities_Regulat_GM__c</fullName>
    <description>Supervisor Comment Custom Formalities &amp; Regulations [GM].</description>
    <inlineHelpText>Supervisor Comment Custom Formalities &amp; Regulations [GM].</inlineHelpText>
    <label>Comment Custom Formalities &amp; Regulat[GM]</label>
    <type>TextArea</type>
</CustomField>