2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Customer_Service_GM__c.field-meta.xml
<CustomField>
    <fullName>Comment_Customer_Service_GM__c</fullName>
    <description>Supervisor Comment Customer Service [GM].</description>
    <inlineHelpText>Supervisor Comment Customer Service [GM].</inlineHelpText>
    <label>Comment Customer Service [GM]</label>
    <type>TextArea</type>
</CustomField>