2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Customers_Formalities__c.field-meta.xml
<CustomField>
    <fullName>Comment_Customers_Formalities__c</fullName>
    <description>Supervisor Comment Customers Formalities</description>
    <inlineHelpText>Supervisor Comment Customers Formalities.</inlineHelpText>
    <label>Comment Customers Formalities</label>
    <type>TextArea</type>
</CustomField>