2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Data_Management_RT__c.field-meta.xml
<CustomField>
    <fullName>Comment_Data_Management_RT__c</fullName>
    <description>Comment for Data Management [RT]</description>
    <inlineHelpText>Comment for Data Management [RT]</inlineHelpText>
    <label>Comment Data Management [RT]</label>
    <type>TextArea</type>
</CustomField>