2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Data_Management_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Comment_Data_Management_Shipping__c</fullName>
    <description>Supervisor  Comment Data Management [Shipping]</description>
    <inlineHelpText>Supervisor Comment Data Management [Shipping].</inlineHelpText>
    <label>Comment Data Management [Shipping]</label>
    <type>TextArea</type>
</CustomField>