2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Discipline__c.field-meta.xml
<CustomField>
    <fullName>Comment_Discipline__c</fullName>
    <description>Supervisor Comment for Discipline.</description>
    <inlineHelpText>Supervisor Comment for Discipline.</inlineHelpText>
    <label>Comment Discipline</label>
    <type>TextArea</type>
</CustomField>