2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Effective_Communication_skills__c.field-meta.xml
<CustomField>
    <fullName>Comment_Effective_Communication_skills__c</fullName>
    <description>Supervisor Comment for Effective Communication skills.</description>
    <inlineHelpText>Supervisor Comment for Effective Communication skills.</inlineHelpText>
    <label>Comment Effective Communication skills</label>
    <type>TextArea</type>
</CustomField>