2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Effective_Team_Player__c.field-meta.xml
<CustomField>
    <fullName>Comment_Effective_Team_Player__c</fullName>
    <description>Supervisor Comment for Effective Team Player.</description>
    <inlineHelpText>Supervisor Comment for Effective Team Player.</inlineHelpText>
    <label>Comment Effective Team Player</label>
    <type>TextArea</type>
</CustomField>