2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Empathy__c.field-meta.xml
<CustomField>
    <fullName>Comment_Empathy__c</fullName>
    <description>Supervisor Comment Empathy.</description>
    <inlineHelpText>Supervisor Comment Empathy.</inlineHelpText>
    <label>Comment Empathy</label>
    <type>TextArea</type>
</CustomField>