2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Freight_Formalities__c.field-meta.xml
<CustomField>
    <fullName>Comment_Freight_Formalities__c</fullName>
    <description>Supervisor Comment Freight Formalities.</description>
    <inlineHelpText>Supervisor Comment Freight Formalities.</inlineHelpText>
    <label>Comment Freight Formalities</label>
    <type>TextArea</type>
</CustomField>