2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Comment_Initiative__c</fullName>
    <description>Supervisor Comment for Initiative.</description>
    <inlineHelpText>Supervisor Comment for Initiative.</inlineHelpText>
    <label>Comment Initiative</label>
    <type>TextArea</type>
</CustomField>