2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_International_Freight_GM__c.field-meta.xml
<CustomField>
    <fullName>Comment_International_Freight_GM__c</fullName>
    <description>Supervisor Comment International Freight [GM].</description>
    <inlineHelpText>Supervisor Comment International Freight [GM].</inlineHelpText>
    <label>Comment International Freight [GM]</label>
    <type>TextArea</type>
</CustomField>