2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Job_Site_works__c.field-meta.xml
<CustomField>
    <fullName>Comment_Job_Site_works__c</fullName>
    <description>Supervisor Comment Job Site works.</description>
    <inlineHelpText>Supervisor Comment Job Site works.</inlineHelpText>
    <label>Comment Job Site works</label>
    <type>TextArea</type>
</CustomField>