2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Key_HT_Account_and_Competition__c.field-meta.xml
<CustomField>
    <fullName>Comment_Key_HT_Account_and_Competition__c</fullName>
    <description>Supervisor Comment Key HT Account and Competition.</description>
    <inlineHelpText>Supervisor Comment Key HT Account and Competition.</inlineHelpText>
    <label>Comment Key HT Account and Competition</label>
    <type>TextArea</type>
</CustomField>