2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Key_HT_Account_Competition_GM__c.field-meta.xml
<CustomField>
    <fullName>Comment_Key_HT_Account_Competition_GM__c</fullName>
    <description>Supervisor Comment Key HT Account &amp; Competition [GM].</description>
    <inlineHelpText>Supervisor Comment Key HT Account &amp; Competition [GM].</inlineHelpText>
    <label>Comment Key HT Account &amp; Competition [GM</label>
    <type>TextArea</type>
</CustomField>