2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Knowledge_App_Registration__c.field-meta.xml
<CustomField>
    <fullName>Comment_Knowledge_App_Registration__c</fullName>
    <description>Supervisor Comment Knowledge &amp; Application of Salesforce</description>
    <inlineHelpText>Supervisor Comment Knowledge &amp; Application of Salesforce.</inlineHelpText>
    <label>Comment Knowledge App &amp; Registration</label>
    <type>TextArea</type>
</CustomField>