2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Knowledge_of_Registration_Coll__c.field-meta.xml
<CustomField>
    <fullName>Comment_Knowledge_of_Registration_Coll__c</fullName>
    <description>Supervisor Comment Knowledge of Registration &amp; Collection Management.</description>
    <inlineHelpText>Supervisor Comment Knowledge of Registration &amp; Collection Management</inlineHelpText>
    <label>Comment Knowledge of Registration &amp; Coll</label>
    <type>TextArea</type>
</CustomField>