2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Leadership__c.field-meta.xml
<CustomField>
    <fullName>Comment_Leadership__c</fullName>
    <description>Supervisor Comment for Leadership.</description>
    <inlineHelpText>Supervisor Comment for Leadership.</inlineHelpText>
    <label>Comment Leadership</label>
    <type>TextArea</type>
</CustomField>