2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Local_Authority_Declaration_Syst__c.field-meta.xml
<CustomField>
    <fullName>Comment_Local_Authority_Declaration_Syst__c</fullName>
    <description>Supervior Comment Local Authority Declaration System.</description>
    <inlineHelpText>Supervior Comment Local Authority Declaration System.</inlineHelpText>
    <label>Comment Local Authority Declaration Syst</label>
    <type>TextArea</type>
</CustomField>