2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Local_Customs_Systems__c.field-meta.xml
<CustomField>
    <fullName>Comment_Local_Customs_Systems__c</fullName>
    <description>Supervisor Comment Local Customs Systems</description>
    <inlineHelpText>Supervisor Comment Local Customs Systems.</inlineHelpText>
    <label>Comment Local Customs Systems</label>
    <type>TextArea</type>
</CustomField>