2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Market_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Comment_Market_Knowledge__c</fullName>
    <description>Supervisor Comment Market Knowledge</description>
    <inlineHelpText>Supervisor Comment Market Knowledge</inlineHelpText>
    <label>Comment Market Knowledge</label>
    <type>TextArea</type>
</CustomField>