2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Materials__c.field-meta.xml
<CustomField>
    <fullName>Comment_Materials__c</fullName>
    <description>Supervisor comment for Materials.</description>
    <inlineHelpText>Supervisor comment for Materials.</inlineHelpText>
    <label>Comment Materials</label>
    <type>TextArea</type>
</CustomField>