2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Metals_Material_Identifi__c.field-meta.xml
<CustomField>
    <fullName>Comment_Metals_Material_Identifi__c</fullName>
    <description>Supervisor for Comment Material Identification of Metals</description>
    <inlineHelpText>Supervisor for Comment Material Identification of Metals</inlineHelpText>
    <label>Comment Metals [Material Identifi.]</label>
    <type>TextArea</type>
</CustomField>