2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Off_Site_Works__c.field-meta.xml
<CustomField>
    <fullName>Comment_Off_Site_Works__c</fullName>
    <description>Comment for Off Site works</description>
    <inlineHelpText>Comment for Off Site works</inlineHelpText>
    <label>Comment Off Site Works</label>
    <type>TextArea</type>
</CustomField>