2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_on_Types_of_Carton_boxes__c.field-meta.xml
<CustomField>
    <fullName>Comment_on_Types_of_Carton_boxes__c</fullName>
    <description>Supervisor comments on Types of Carton boxes.</description>
    <inlineHelpText>Supervisor comments on Types of Carton boxes.</inlineHelpText>
    <label>Comment on Types of Carton boxes</label>
    <type>TextArea</type>
</CustomField>