2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Oral_Written_Comm_Skills__c.field-meta.xml
<CustomField>
    <fullName>Comment_Oral_Written_Comm_Skills__c</fullName>
    <description>Comment for Oral &amp; Written Communication skills:</description>
    <inlineHelpText>Comment for Oral &amp; Written Communication skills:</inlineHelpText>
    <label>Comment Oral &amp; Written Comm. Skills</label>
    <type>TextArea</type>
</CustomField>