2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Other_Works_Material_Identi__c.field-meta.xml
<CustomField>
    <fullName>Comment_Other_Works_Material_Identi__c</fullName>
    <description>Material Identification for Other works on Paper (Maps, Documents, Manuscripts, Books, etc).</description>
    <inlineHelpText>Material Identification for Other works on Paper (Maps, Documents, Manuscripts, Books, etc).</inlineHelpText>
    <label>Comment Other Works [Material Identi.]</label>
    <type>TextArea</type>
</CustomField>