2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Oversize_Object_DataEntry_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>Comment_Oversize_Object_DataEntry_Mgmt__c</fullName>
    <description>Comment Oversize Object [DataEntry/Management]</description>
    <inlineHelpText>Comment Oversize Object [DataEntry/Management]</inlineHelpText>
    <label>Comment Oversize Object [DataEntry/Mgmt]</label>
    <type>TextArea</type>
</CustomField>