2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Oversize_Object_Material_Identi__c.field-meta.xml
<CustomField>
    <fullName>Comment_Oversize_Object_Material_Identi__c</fullName>
    <description>Supervisor Comment for Material Identification of Oversize objects (inclusive of 2D &amp; 3D).</description>
    <inlineHelpText>Supervisor Comment for Material Identification of Oversize objects (inclusive of 2D &amp; 3D).</inlineHelpText>
    <label>Comment Oversize Object[Material Identi]</label>
    <type>TextArea</type>
</CustomField>