2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Oversize_Object_Visual_Check__c.field-meta.xml
<CustomField>
    <fullName>Comment_Oversize_Object_Visual_Check__c</fullName>
    <description>Comment Oversize Object [Visual Check]</description>
    <inlineHelpText>Comment Oversize Object [Visual Check]</inlineHelpText>
    <label>Comment Oversize Object[Visual Check]</label>
    <type>TextArea</type>
</CustomField>