2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Painting_Material_Identi__c.field-meta.xml
<CustomField>
    <fullName>Comment_Painting_Material_Identi__c</fullName>
    <description>Comment from Supervisor 6: for Painting [Material Identificati]</description>
    <inlineHelpText>Comment from Supervisor 6: for Painting [Material Identificati]</inlineHelpText>
    <label>Comment Painting [Material Identi.]</label>
    <type>TextArea</type>
</CustomField>