2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Photographic_DataEntry_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>Comment_Photographic_DataEntry_Mgmt__c</fullName>
    <description>Comment Photographic [Data Entry  / Management]</description>
    <inlineHelpText>Comment Photographic [Data Entry  / Management]</inlineHelpText>
    <label>Comment Photographic [DataEntry/Mgmt]</label>
    <type>TextArea</type>
</CustomField>