2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Photographic_Material_Identi__c.field-meta.xml
<CustomField>
    <fullName>Comment_Photographic_Material_Identi__c</fullName>
    <description>Supervisor comments for Photographic Works On Paper of Material identification.</description>
    <inlineHelpText>Supervisor comments for Photographic Works On Paper of Material identification.</inlineHelpText>
    <label>Comment Photographic [Material Identi.]</label>
    <type>TextArea</type>
</CustomField>